Don't allow presentational attributes to set colors if the "don't use document colors" pref is set.  Bug 400452, r+sr=dbaron